[project]
name = "langgraph-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-core>=0.3.66",
    "langchain-deepseek>=0.1.3",
    "langgraph>=0.5.0",
    "python-dotenv>=1.1.1",
    "tavily-python>=0.7.8",
]
